--- a/CQRS Pattern/CQRS Pattern/appsettings.Development.json
+++ b/CQRS Pattern/CQRS Pattern/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "EmployeeCS": "server=REMOTESTATE\\SQLEXPRESS; database=employeeDB; Integrated Security=True; MultipleActiveResultSets=true; TrustServerCertificate=true"
+  },
+  "AllowedHosts": "*"
 }
